// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`if condition does not renders the content if the condition evaluates to falsy 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
            <html>
                <body>
                    
                </body>
            </html>
        "
`;

exports[`if condition renders the content if the condition evaluates to truthy 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
            <html>
                <body>
                    
                        <span>content</span>
                    
                </body>
            </html>
        "
`;
